--- a/wedding-management-client/build.gradle
+++ b/wedding-management-client/build.gradle
@@ -9,11 +9,13 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    // JSON 라이브러리
+    implementation 'com.google.code.gson:gson:2.8.6'
+    
     implementation 'com.google.guava:guava:29.0-jre'
     testImplementation 'junit:junit:4.13'
 }
 
 application {
-    mainClassName = 'mini.project.pms.App'
+    mainClassName = 'com.eomcs.pms.ServerApp'
 }
